--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -60,17 +60,17 @@
                     <button onclick="askForCard()">Запитати</button>
                 </div>
                 
-                <div id="guess-count-form" style="display: none;">
+              <!--    <div id="guess-count-form" style="display: none;">     Це коментар -->
                     <!-- Це коментар <p>Гравець <span id="target-player-name-guess"></span> має карти значення <span id="card-rank-guess"></span>. Скільки їх у нього?</p>   Це коментар -->
-                    <input type="number" id="guess-count-input" min="1" max="4">
-                    <button onclick="guessCount()">Вгадати кількість</button>
-                </div>
+               <!--       <input type="number" id="guess-count-input" min="1" max="4">     Це коментар -->
+              <!--        <button onclick="guessCount()">Вгадати кількість</button>    Це коментар -->
+             <!--     </div>   Це коментар -->
 
 
 
                 <div id="guess-count" style="display: none;">
                     <p>Вгадайте, скільки карт з цим рангом є у вашого суперника?</p>
-                    <input type="number" id="guess-count-input" min="1" max="4">
+                <!--      <input type="number" id="guess-count-input" min="1" max="4">   Це коментар --> 
                     <select id="card-count-select">
                         <option value="">Вибрати значення</option>
                         <option value="1">1</option>
