--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -146,8 +146,8 @@
             targetPlayerSelect: document.getElementById('target-player-select'),
             cardRankSelect: document.getElementById('card-rank-select'),
                 
-            guessCountForm: document.getElementById('guess-count-form'),
-            guessCountInput: document.getElementById('guess-count-select'),
+            //guessCountForm: document.getElementById('guess-count-form'),
+            //guessCountInput: document.getElementById('guess-count-select'),
             guessSuitsForm: document.getElementById('guess-suits-form'),
 
             guessCount: document.getElementById('guess-count'),
@@ -158,8 +158,8 @@
             responseButtons: document.getElementById('response-buttons'),
             askingPlayerName: document.getElementById('asking-player-name'),
             askedCardRank: document.getElementById('asked-card-rank'),
-            targetPlayerNameGuess: document.getElementById('target-player-name-guess'),
-            cardRankGuess: document.getElementById('card-rank-guess')
+            //targetPlayerNameGuess: document.getElementById('target-player-name-guess'),
+            //cardRankGuess: document.getElementById('card-rank-guess')
         };
 
         if (tg) {
