--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -151,7 +151,7 @@
             guessSuitsForm: document.getElementById('guess-suits-form'),
 
             guessCount: document.getElementById('guess-count'),
-            //guessCountInput: document.getElementById('guess-count-input'),
+            guessCountInput: document.getElementById('guess-count-select'),
             submitGuessCountBtn: document.getElementById('submit-guess-count-btn'),
                 
             suitsCheckboxes: document.getElementById('suits-checkboxes'),
