--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -157,7 +157,7 @@
             suitsCheckboxes: document.getElementById('suits-checkboxes'),
             responseButtons: document.getElementById('response-buttons'),
             askingPlayerName: document.getElementById('asking-player-name'),
-            askedCardRank: document.getElementById('asked-card-rank'),
+            askedCardRank: document.getElementById('asked-card-rank')  //,
             //targetPlayerNameGuess: document.getElementById('target-player-name-guess'),
             //cardRankGuess: document.getElementById('card-rank-guess')
         };
