--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -236,7 +236,7 @@
 
         function hideAllControls() {
             elements.gameActions.style.display = 'none';
-            elements.guessCount.style.display = 'none';
+            //elements.guessCount.style.display = 'none';
             elements.guessSuitsForm.style.display = 'none';
             elements.responseButtons.style.display = 'none';
         }
