--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -300,7 +300,7 @@
                         updateUI(data.state, data.state.my_hand);
                         break;
                     case 'game_over':
-                        elements.game.classList.style.display = 'none';
+                        elements.game.style.display = 'none';
                         elements.gameEndDialog.style.display = 'block';
                         elements.winnerName.textContent = `Гра закінчена! Переможець: ${data.winner}.`;
                         break;
