--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -312,7 +312,7 @@
                         break;
                     case 'guess_count_needed':
                         hideAllControls();
-                        elements.guessSuitsForm.style.display = 'block';
+                        elements.guessCount.style.display = 'block';
                         break;
                     case 'guess_suits_needed':
                         hideAllControls();
