--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -145,6 +145,7 @@
             <h2 id="winner-name"></h2>
             <div id="admin-controls" style="display: none;">
                 <button onclick="startNewGame()">Нова гра</button>
+                <button onclick="closeGameDialog()">Закрити</button>
             </div>
             <div id="player-controls" style="display: none;">
                 <button onclick="closeGameDialog()">Закрити</button>
